<resources>
    <string name="app_name">WeatherPal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- flags for search frag -->
    <string name="flagUK">&#x1F1EC;&#x1F1E7;</string>
    <string name="flagCA">&#x1F1E8;&#x1F1E6;</string>
    <string name="flagJP">&#x1F1EF;&#x1F1F5;</string>
    <string name="flagAU">&#x1F1E6;&#x1F1FA;</string>
    <string name="flagUS">&#x1F1FA;&#x1F1F8;</string>

    <!-- replacing all hardcoded .xml text values with string resources -->

    <string name="WeatherPalTitle">WeatherPal</string>
    <string name="NetworkMessage">No Internet Connection. Please\nconnect to your network
        and try again"</string>
    <string name="activitySplashTrustyApp">Your trustworthy weather app!</string>

    <string name="activityLoginSignInMessage">Sign in to access your weather preferences!</string>
    <string name="activityLoginEmail">Email</string>
    <string name="activityLoginPass">Password</string>
    <string name="activityLoginBtn">LOGIN</string>
    <string name="activityRegisterMessage">Don\'t have an account with us?</string>
    <string name="activityRegisterNav">Register Today!</string>

    <string name="activityRegisterTitle">Create Account</string>
    <string name="activityRegisterCreateMessage">Register and save all your favourite
        locations!</string>
    <string name="activityRegisterEmail">Ex. myEmail@email.com</string>
    <string name="activityRegisterPass">Pass: min 6 characters</string>
    <string name="activityRegisterConfirmPass">Confirm Password</string>
    <string name="activityRegisterBtn">REGISTER</string>
    <string name="activityLoginMessage">Already have an account?</string>
    <string name="activityLoginNav">Login</string>

    <string name="activityWeatherDetailHumidity">Humidity</string>
    <string name="activityWeatherDetailWind">Wind</string>
    <string name="activityWeatherDetailFeelsLike">Feels Like</string>
    <string name="activityWeatherDetailWindChill">Wind Chill</string>
    <string name="activityWeatherDetailUVIndex">UV Index</string>
    <string name="activityWeatherDetailBackButton">Back</string>

    <string name="fragmentSavedLoading">Loading saved cities..."</string>
    <string name="fragmentSavedNoSavedCities">No Saved Cities</string>
    <string name="fragmentSavedSearchPrompt">Search for a city and save it\nto view it here</string>

    <string name="fragmentSearchSearch">Search</string>
    <string name="fragmentSearchStartMessage">Start searching to see weather\nfor different
        cities!</string>
    <string name="fragmentSearchNoResults">No Results Found :(</string>

    <string name="fragmentSettingsAccount">ACCOUNT</string>
    <string name="fragmentSettingsPreferences">PREFERENCES</string>
    <string name="fragmentSettingsTemperature">Temperature Unit</string>
    <string name="fragmentSettingsTemperatureC">°C</string>
    <string name="fragmentSettingsTemperatureF">°F</string>
    <string name="fragmentSettingsTheme">Theme</string>
    <string name="fragmentSettingsThemeLight">Light</string>
    <string name="fragmentSettingsThemeDark">Dark</string>
    <string name="fragmentSettingsAbout">ABOUT</string>
    <string name="fragmentSettingsVersion">Version</string>
    <string name="fragmentSettingsActions">ACTIONS</string>
    <string name="fragmentSettingsFeedback">Send Feedback</string>
    <string name="fragmentSettingsOpenEmailApp">Opens your email app</string>
    <string name="fragmentSettingsViewOnGithub">View on Github</string>
    <string name="fragmentSettingsOpenBrowser">Opens in your browser</string>
    <string name="fragmentSettingsShareApp">Share App</string>
    <string name="fragmentSettingsShareWithFriends">Share with friends</string>
    <string name="fragmentSettingsSignOut">Sign Out</string>

    <string name="itemLayoutCity">city</string>
    <string name="itemLayoutRegion">region</string>
    <string name="itemLayoutRegionCountry">region, country</string>
    <string name="itemLayoutLat">lat</string>
    <string name="itemLayoutLon">lon</string>
    <string name="lat_lon">lat, lon</string>

    <!-- Bottom Nav -->
    <string name="BottomNavSearch">Search</string>
    <string name="BottomNavSaved">Saved</string>
    <string name="BottomNavSettings">Settings</string>
</resources>