<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="13dp"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/itemLayoutCity"
        android:textColor="@color/textColour1"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/weatherIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regionCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/itemLayoutRegionCountry"
        android:textColor="@color/textColour1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/latLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="227dp"
        android:text="@string/lat_lon"
        android:textColor="@color/textColour1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/regionCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionCountry" />

    <!--    <TextView-->
    <!--        android:id="@+id/lon"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="92dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:text="lon"-->
    <!--        android:textColor="@color/textColour1"-->
    <!--        android:textSize="13sp"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/latLon"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/region" />-->

</androidx.constraintlayout.widget.ConstraintLayout>