<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SavedFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/secondary"
        android:paddingTop="50dp"
        android:layout_marginBottom="15dp"
        app:title="Saved"
        app:titleTextColor="@color/textColour1" />

    <!-- create empty saved cities page for now -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- these text views will show when there are no saved cities -->
        <!-- center text and change their sizes -->

        <!-- circle vector for an icon -->

        <ProgressBar
            android:id="@+id/progressBarSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/networkMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/NetworkMessage"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/progressBarSaved"
            tools:layout_editor_absoluteY="268dp" />

        <TextView
            android:id="@+id/progressBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:text="@string/fragmentSavedLoading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBarSaved"/>

        <TextView
            android:id="@+id/emptyMessage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragmentSavedNoSavedCities"
            android:textSize="28sp"
            android:textAppearance="@style/Text.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/emptyMessage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/fragmentSavedSearchPrompt"
            android:textAppearance="@style/Text.Body"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyMessage1"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/emptyImageView"
            android:layout_width="160dp"
            android:layout_height="144dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/rain_icon"
            app:layout_constraintBottom_toTopOf="@id/emptyMessage1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>

        <!-- Recycler View (refer to week 10 lesson) -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="410dp"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layout_editor_absoluteY="99dp"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>